@@ -33,6 +33,7 @@ import org.junit.Before;
 import org.junit.Test;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -175,6 +176,7 @@ public class TestProtocolGeneric {
       this.throwUndeclaredError = false;
     }
     assertNotNull(error);
+    assertTrue(error.toString().contains("foo"));
   }
 
   @Test
